--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ version: '3.8'
 services:
 
   web:
-    build: ./project
+    build: src
     command: uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
     volumes:
-      - ./project:/usr/src/app
+      - ./src:/usr/src/app
     ports:
-      - 8004:8000
+      - 8000:8000
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/foo
     depends_on:
