--- a/src/requirements/pyproject.toml
+++ b/src/requirements/pyproject.toml
@@ -9,8 +9,8 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.111.0"
 uvicorn = "^0.29.0"
-psycopg2-binary = "^2.9.9"
 sqlmodel = "^0.0.18"
+asyncpg = "^0.29.0"
 
 
 [build-system]
